Update common-build and backend to build/run the project on JVM11+